@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-12-24"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20091224
-#define RUBY_PATCHLEVEL 245
+#define RUBY_PATCHLEVEL 246
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
